# HowYouSeeMe

./: .gitignore  BLUELILY_INTEGRATION_COMPLETE.md  FINAL_TEST_CONFIGURATION.md  IMPLEMENTATION_STATUS.md  KINECT_SETUP_GUIDE.md  MENU_GUIDE.md  PERFORMANCE_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  ROBOT_HEAD_STATUS.md  ROS2_SETUP_GUIDE.md  ROS2_TRANSFORMATION_COMPLETE.md  SAM2_MODES_FIXED.md  STOP_STREAMING_GUIDE.md  SYSTEM_STATUS.md  WARP.md  YOLO_SLAM_STATUS.md  capture_and_process_kinect.sh  cv_menu.sh  cv_pipeline_menu.sh  debug_cv_pipeline.sh  full_system_rviz.rviz  install_insightface.sh  install_kinect_bindings.sh  install_kinect_direct.sh  install_libfreenect2_modern_fixed.sh  kinect2_rviz_config.rviz  kinect2_slam_rviz.rviz  launch_full_system_rviz.sh  launch_kinect2_ros2_slam.sh  launch_kinect2_ros2_slam_fixed_tf.sh  launch_kinect2_slam_with_imu.sh  launch_kinect_complete.sh  launch_kinect_sam2_server.sh  launch_kinect_slam.sh  launch_robot_head.sh  login_huggingface.py  pointcloud_denoiser.py  requirements.txt  reset_cv_server.sh  (+29 more)
archive/perception_old/detection/: __init__.py  ros2_object_detector.py
archive/perception_old/slam/: __init__.py
config/: config.yaml
cpp_build/: CMakeCache.txt  Makefile  cmake_install.cmake  test_modern_performance
data/faces/: face_database.pkl  metadata.json
docs/: ALL_FIXES_APPLIED.md  APPLY_FIX_NOW.md  COOLDOWN_BYPASS_FIX.md  COOLDOWN_FIX.md  COORDINATE_FRAME_FIX_SUMMARY.md  CV_PIPELINE_SAM2.md  CV_PIPELINE_SYNC_FIX.md  CV_PIPELINE_TROUBLESHOOTING.md  CV_Pipeline_Setup_Complete.md  EMOTION_DETECTION_ADDED.md  EMOTION_DETECTION_CLARIFICATION.md  EMOTION_DETECTION_COMPLETE.md  EMOTION_DETECTION_OPTIONS.md  FACE_RECOGNITION_COMPLETE.md  FACE_RECOGNITION_PLAN.md  FINAL_STATUS.md  FINAL_STREAMING_FIX_SUMMARY.md  FORK_VERIFICATION_COMPLETE.md  Getting_Started.md  Git_Setup.md  HowYouSeeMe_Plan.md  INSIGHTFACE_COMPLETE_SUMMARY.md  INSIGHTFACE_FIX.md  KINECT2_ROS2_FORK_SUMMARY.md  Kinect2_ROS2_Success.md  KinectV2RosHumble.md  Kinect_Axis_Mapping.md  Kinect_Coordinate_Frame_Fix.md  MENU_GUIDE.md  MENU_INSIGHTFACE_ADDED.md  MENU_UPDATES.md  MIGRATION_COMPLETE.md  PHASE2_ORB_SLAM3_SETUP.md  PUBLISH_TO_GITHUB.md  Pipeline_Enhancements.md  Protonect_Global_Setup.md  QUICK_FIX_REFERENCE.md  QUICK_STOP.md  README.md  RECOMMENDED_MODELS_TO_ADD.md  (+16 more)
howyouseeme_scripts/: start_complete_system.sh  start_howyouseeme.sh  start_kinect_bridge.sh  test_kinect_bridge.sh
howyouseeme_scripts/config/: howyouseeme.rviz
old_kinect_packages/: README.md
old_kinect_packages/kinect2_simple_publisher/: package.xml
old_kinect_packages/kinect2_simple_publisher/launch/: kinect2_simple.launch.py
old_kinect_packages/kinect2_simple_publisher/src/: kinect2_simple_publisher.cpp
ros2_ws/log/: latest_build
ros2_ws/src/bluelily_bridge/launch/: bluelily_imu.launch.py
ros2_ws/src/bluelily_bridge/src/: bluelily_imu_node.cpp
ros2_ws/src/cv_pipeline/: CMakeLists.txt  package.xml
ros2_ws/src/cv_pipeline/cv_pipeline/: semantic_projection_node.py
ros2_ws/src/cv_pipeline/python/: cv_model_manager.py  insightface_worker.py  sam2_server.py  sam2_server_v2.py
ros2_ws/src/kinect2_bridge/: CMakeLists.txt
ros2_ws/src/kinect2_bridge/launch/: kinect2_bridge_cpu.yaml
ros2_ws/src/kinect2_simple_publisher/: CMakeLists.txt
ros2_ws/src/kinect2_simple_publisher/src/: kinect2_simple_publisher.cpp
ros2_ws/src/kinect2_slam/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/kinect2_slam/kinect2_slam/: event_checkpointer_node.py  live_enrichment_node.py  mcp_server.py  named_memory_node.py  rerun_bridge_node.py  rerun_logger_node.py  tsdf_integrator_node.py  world_synthesiser_node.py
ros2_ws/src/kinect2_slam/src/: orb_slam3_node.cpp
scripts/: QUICK_REFERENCE.txt  README.md  check_orb_slam3_status.sh  diagnose_markers.sh  kill_all.sh  kill_kinect.sh  launch_bluelily_bridge.sh  launch_full_system_rviz.sh  launch_kinect_sam2_server.sh  launch_rviz_kinect.sh  monitor_orb_slam3_build.sh  restart_semantic.sh  restart_semantic_only.sh  run_complete_slam_system.sh  run_complete_system.sh  run_full_system.sh  run_full_system_with_semantics.sh  run_phase2_3.sh  run_phase2_3_split.sh  run_phase4.sh  run_rerun_logger.sh  run_tsdf_only.sh  test_complete_system.sh  test_phase3_only.sh  test_semantic_projection.sh  test_yolo_semantic.sh
src/: __init__.py
src/perception/: __init__.py  kinect_bridge.py  modern_kinect_interface.py  sensor_interface.py
src/perception/detection/: object_detector.py
src/perception/slam/: slam_interface.py
src/ros2_ws/install/: local_setup.sh  setup.sh
src/ros2_ws/install/howyouseeme_ros2/lib/howyouseeme_ros2/: kinect_subscriber  performance_monitor  slam_interface_node  yolo_detector_node
src/ros2_ws/install/howyouseeme_ros2/share/howyouseeme_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros2_ws/install/howyouseeme_ros2/share/howyouseeme_ros2/launch/: detection_only.launch.py
src/ros2_ws/log/: latest_build
src/ros2_ws/src/howyouseeme_ros2/: setup.py
src/ros2_ws/src/howyouseeme_ros2/config/: howyouseeme_visualization.rviz
src/ros2_ws/src/howyouseeme_ros2/howyouseeme_ros2/: performance_monitor.py  simple_test_node.py  slam_interface_node.py  yolo_detector_node.py
src/ros2_ws/src/howyouseeme_ros2/launch/: detection_only.launch.py  howyouseeme_complete.launch.py  howyouseeme_with_visualization.launch.py
